# docs/swagger.yaml
@@ -33,13 +33,13 @@ definitions:
         type: string
       email_addr:
         type: string
+      file_id:
+        type: string
       handphone_no:
         type: string
       level_no:
         type: integer
       name:
-        type: string
-      picture_url:
         type: string
       role_id:
         type: string
@@ -56,13 +56,13 @@ definitions:
         type: string
       email_addr:
         type: string
+      file_id:
+        type: string
       handphone_no:
         type: string
       level_no:
         type: integer
       name:
-        type: string
-      picture_url:
         type: string
       role_id:
         type: string
